# skunkworks-bed-allocation

./: .gitignore  CHANGELOG.md  LICENCE  LICENSE.txt  README.md  pyproject.toml  setup.cfg  setup.py
.github/: pull_request_template.md
app/: gen-css.sh  run.py
app/app/: __init__.py  api.py  app.py  colors.py  index.py  page.py
app/scss/: button.scss  card.scss  core.scss  dropdown.scss  navigation.scss  slider.scss
config/: historic_admissions_data_dictionary.json  patient_data_dictionary.json
config/fake_data_categories/: README.md  fake_speciality_is_medical_mapping.json  patient_fake_data_categories.json
data/: historic_admissions_csv_format.csv  hospital.pkl  patient_df_csv_format.csv
docs/: Makefile  README.md  conf.py  index.rst  installation.rst  integration_testing.md
fake_data_generation/: README.md  forecast_generate_fake_data.py  generate_fake_data.py  patient_generate_fake_data.py
fake_data_generator/: forecast_generate_fake_data.py  patient_generate_fake_data.py
notebooks/: 1.Virtual_Hospital_Environment.ipynb  2.Greedy_Allocation.ipynb  3.MCTS_Allocation.ipynb  4.Time_Series_Forecast.ipynb  README.md
src/agent/: README.md  mcts.py  policy.py  run_mcts.py  simulator.py  utils.py
src/data_preparation/: README.md  create_json_files.py
src/forecasting/: README.md  __init__.py  forecast.py  hourly_elective_prob.json  patient_sampler.py  plotting.py  specialty_info.json  time_series_model.py  utils.py
src/hospital/: README.md  data.py  exceptions.py  people.py
tests/forecasting/: test_patient_sampler.py
tests/integration/: README.md  (+4 more)
(+33 files in other folders)
