[metadata]
name = bed tetris
description = Optimization for Bed Allocation within hospitals
author = Faculty
author-email = info@faculty.ai
url = https://faculty.ai/

[options]
zip_safe = False
packages = find:
include_package_data = True
setup_requires = setuptools_scm
package_dir =
    =src
# Add here dependencies of your project (semicolon/line-separated), e.g.
install_requires =
    anytree==2.8.0
    cloudpickle==2.0.0
    dash==2.0.0
    dash-bootstrap-components==1.0.0b1
    flask==1.1.2
    numpy==1.18.5
    numpyro==0.8.0
    pandas==1.3.4
    scipy==1.6.2
    matplotlib==3.3.4
    tensorflow_probability==0.14.1
    jax[cpu]==0.2.24
    faculty==0.28.0
    tqdm
    ipywidgets
    jupyter_latex_envs


[options.packages.find]
where = src
exclude =
    tests

# Additional install requirements for running tests
[options.extras_require]
testing =
    pytest
    pytest-cov
linting =
    black==21.5b1
    isort==5.9.2
    flake8==3.8.4

[tool:pytest]
# Options for py.test:
addopts =
    --cov bed-tetris --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[tool.setuptools_scm]
version_scheme = guess-next-dev

[bdist_wheel]
universal = 1

[flake8]
ignore = E203 W503 W291 W293
max-line-length = 79
exclude =
    .tox
    dist
    .eggs
